fix styles to be more synthetic

--- a/staff/nicolas-postigo/index.html
+++ b/staff/nicolas-postigo/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <div class="container">
         <img class= "logo" src="images/covid_logo.svg" alt="">
         <div>
             <section class="section__main">
@@ -18,7 +17,7 @@
             </section>
         </div>
 
-            <section class= "off">
+            <section>
                 <h2> Register here for actual information <br> of covid cases </h2>
                 <form class="register__form">
                     <input class="input1" type="text" name="fullname" placeholder="fullname" _required>
@@ -29,12 +28,12 @@
                 </form>
             </section>
 
-        <div class= "off">
+        <div>
         <section class= "register__confirm">User succesfully registered. Proceed to <button class="register__confirm__button"> Login </button>
         </section>
         </div>
 
-        <section class= "off">
+        <section>
             <h2> LOGIN </h2>
             <form class="login__form">
                 <input type="email" name="e-mail" placeholder="e-mail" required>
@@ -43,14 +42,12 @@
             </form>
         </section>
 
-        <section class= "off">
+        <section>
             <h2>WELCOME</h2>
 
         <iframe width="350" height="300" src="https://www.youtube.com/embed/78jLBNSqc3g?rel=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-</div>
     <!-- <script src="./main.js"></script> -->
-    </div>
 </body>
 
 </html>
