--- a/staff/nicolas-postigo/logic/test.html
+++ b/staff/nicolas-postigo/logic/test.html
@@ -6,22 +6,32 @@
     <title>TEST</title>
 </head>
 <body>
+    <link rel="shortcut icon" type="image/png"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine.css">
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/boot.js"></script>
+    <script src="../utils/jasmine-custom-matchers.js"></script>
+
+
     <script src="../utils/call.js"></script>
     <script src="../utils/array-polyfills.js"></script>
-    <script src="../utils/array-polyfills.js"></script>
-    <script src="../utils/call.js"></script>
  
+    <script src="./retrieve-user.js"></script>
+    <script src="./retrieve-user.spec.js"></script>  
+
+    <script src="./authenticate-user.js"></script>
+    <script src="./authenticate-user.spec.js"></script> 
+    <!-- 
     <script src="./register-user.js"></script>
     <script src="./register-user.test.js"></script>
 
-    <script src="./authenticate-user.js"></script>
-    <script src="./authenticate-user.test.js"></script> 
-
-    <script src="./retrieve-user.js"></script>
-    <script src="./retrieve-user.test.js"></script> 
+    
 
     <script src="./modify-user.js"></script>
-    <script src="./modify-user.test.js"></script>
+    <script src="./modify-user.test.js"></script> -->
 
 
 
