apis tries but not succed yet

--- a/staff/nicolas-postigo/logic/demo.html
+++ b/staff/nicolas-postigo/logic/demo.html
@@ -25,5 +25,8 @@
 
     <script src="./retrieve-vehicle.js"></script>
     <script src="./retrieve-vehicle.demo.js"></script>
+
+    <script src="./search-covid.js"></script>
+    <script src="./search-covid.demo.js"></script>
 </body>
 </html> 
