--- a/staff/nicolas-postigo/index.html
+++ b/staff/nicolas-postigo/index.html
@@ -18,13 +18,15 @@
     <script src="./logic/register-user.js"></script>
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/retrieve-user.js"></script>
-    <script src="./logic/search-in-google.js"></script>
     <script src="./logic/modify-user.js"></script>
+    <script src="./logic/search-covid-countries.js"></script>
     <script src="./logic/search-vehicles.js"></script>
     <script src="./logic/retrieve-vehicle.js"></script>
     <script src="./logic/toggle-like-vehicle.js"></script>
-    <script src="./logic/search-covid.js"></script>
-    <script src="./logic/search-vehicles2.js"></script>
+   <!--  <script src="./logic/search-in-google.js"></script>
+  
+    
+     -->
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -42,8 +44,8 @@
     <script src="./components/detail.jsx" type="text/babel"></script>
     <script src="./components/home.jsx" type="text/babel"></script>
     <script src="./components/feedback.jsx" type="text/babel"></script>
-    <script src="./components/search2.jsx" type="text/babel"></script>
-    <script src="./components/results2.jsx" type="text/babel"></script>
+    <script src="./components/search-covid.jsx" type="text/babel"></script>
+    <script src="./components/results-covid.jsx" type="text/babel"></script>
 
     <script src="./app.jsx" type="text/babel"></script>
     <script src="./index.jsx" type="text/babel"></script>
