--- a/staff/nicolas-postigo/logic/demo.html
+++ b/staff/nicolas-postigo/logic/demo.html
@@ -26,7 +26,7 @@
     <script src="./retrieve-vehicle.js"></script>
     <script src="./retrieve-vehicle.demo.js"></script>
 
-    <script src="./search-covid.js"></script>
-    <script src="./search-covid.demo.js"></script>
+    <script src="./search-covid-countries.js"></script>
+    <script src="./search-covid-countries.demo.js"></script>
 </body>
 </html> 
