--- a/staff/nicolas-postigo/index.html
+++ b/staff/nicolas-postigo/index.html
@@ -20,13 +20,11 @@
     <script src="./logic/retrieve-user.js"></script>
     <script src="./logic/modify-user.js"></script>
     <script src="./logic/search-covid-countries.js"></script>
+    <script src="./logic/retrieve-covid-country.js"></script>
+    <script src="./logic/toggle-like-covid.js"></script>
     <script src="./logic/search-vehicles.js"></script>
     <script src="./logic/retrieve-vehicle.js"></script>
     <script src="./logic/toggle-like-vehicle.js"></script>
-   <!--  <script src="./logic/search-in-google.js"></script>
-  
-    
-     -->
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -41,7 +39,7 @@
     <script src="./components/search.jsx" type="text/babel"></script>
     <script src="./components/results.jsx" type="text/babel"></script>
     <script src="./components/profile.jsx" type="text/babel"></script>
-    <script src="./components/detail.jsx" type="text/babel"></script>
+    <script src="./components/detail-covid.jsx" type="text/babel"></script>
     <script src="./components/home.jsx" type="text/babel"></script>
     <script src="./components/feedback.jsx" type="text/babel"></script>
     <script src="./components/search-covid.jsx" type="text/babel"></script>
